created partial, fixed page routes, created page controller

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,7 +17,7 @@
       </div>
     </form>
   </div>
-      <p class="sign-up-link">Signup instead</p>
+      <a href='/login' class="sign-up-link">Login instead</p>
 </div>
 
 <script src="./js/signup.js"></script>
