updated import/export references

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
   
       <form class="form login-form">
         <div class="form-group">
-          <label for="email-login">email:</label>
+          <label for="username-login">username:</label>
           <input class="form-input" type="text" id="email-login" />
         </div>
         <div class="form-group">
@@ -16,6 +16,6 @@
         </div>
       </form>
     </div>
-    <p class="sign-up-link">Signup instead</p>
+    <a href='/signup' class="sign-up-link">Login instead</p>
     <div class="col-md-6">
     <script src="./js/login.js"></script>
