--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,12 +1,8 @@
 <div class="row">
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
+        <label for="username-signup">username:</label>
         <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
