--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,22 +1,9 @@
-<!-- Loop over each object in the projects array -->
+<!-- Loop over each object in the posts array -->
 {{#each posts as |post| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <a href="/project/{{project.id}}">{{}}</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+<a href="post/{{post.id}}">
+  <div>
+    <p>{{post.title}}</p>
+    <p>Posted by {{post.user.username}} on {{post.created_date}}</p>
   </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
-</div>
+</a>
 {{/each}}
