--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -13,10 +13,9 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="money">💸</span>
         <a href="/">Tech Blog</a>
       </h1>
-      {{ > navbar}}
+
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
@@ -28,9 +27,9 @@
   </div>
 
   <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
+  {{!-- {{#if logged_in}} --}}
+  {{!-- <script src="/js/logout.js"></script>
+  {{/if}} --}}
 </body>
 
 </html>
