--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,14 +1,11 @@
-<div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p>
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
+<div>
+<header>{{post.title}}</header>
+{{post.content}}
+<button>Add Comment</button>
 </div>
+{{#each post.comment as |comment|}}
+<div>
+<header>Posted by: {{comment.user.username}}</header>
+<p>{{comment.content}}</p>
+</div>
+{{/each}}
