--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,10 +12,18 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
+     
+     <nav>
+      <img src="../../Assets/tech-blog-logo.png"/>
       <h1>
-        <a href="/">Tech Blog</a>
+        <a href="/">Home</a>
+        <a href="/dashboard">Dashboard</a>
+        <a href="/login">Login</a>
+        {{#if logged_in}} 
+        <a href="/logout">Logout</a>
+        {{/if}}
       </h1>
-
+      </nav> 
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
@@ -27,9 +35,9 @@
   </div>
 
   <!-- Render script for logged in users only -->
-  {{!-- {{#if logged_in}} --}}
-  {{!-- <script src="/js/logout.js"></script>
-  {{/if}} --}}
+  {{#if logged_in}} 
+  <script src="/js/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
