--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,6 +16,6 @@
         </div>
       </form>
     </div>
-    <a href='/signup' class="sign-up-link">Login instead</p>
+    <a href='/signup' class="sign-up-link">Sign Up instead</p>
     <div class="col-md-6">
     <script src="./js/login.js"></script>
