--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,5 @@
 <div class="row">
+    <h2>Sign Up</h2>
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">username:</label>
@@ -9,7 +10,7 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit">Sign Up</button>
       </div>
     </form>
   </div>
