--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,15 @@
+<div class="is-size-1	is-pink">Home</div>
+
 <!-- Loop over each object in the posts array -->
 {{#each posts as |post| }}
-{{#if logged_in}}
+{{!-- {{#if logged_in}} --}}
 <a href="post/{{post.id}}">
-{{/if}}
-  <div>
-    <p>{{post.title}}</p>
-    <p>Posted by {{post.user.username}} on {{post.created_date}}</p>
-  </div>
-{{#if logged_in}}
+{{!-- {{/if}} --}}
+  <header class="card-header my-4 is-pink is-justify-content-space-between height gray-background">
+    <div>{{post.title}}</div>
+    <div>Posted by {{post.user.username}} on {{format_date post.date_created}}</div>
+  </header>
+{{!-- {{#if logged_in}} --}}
 </a>
-{{/if}}
+{{!-- {{/if}} --}}
 {{/each}}
