--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6">
-      <h2>Login</h2>
+      <h2 class="is-pink is-size-3 has-text-weight-bold	">Login</h2>
   
       <form class="form login-form">
         <div class="form-group">
@@ -12,10 +12,12 @@
           <input class="form-input" type="password" id="password-login" />
         </div>
         <div class="form-group">
-          <button class="btn btn-primary" type="submit">login</button>
+          <button class="mt-2 button btn is-primary" type="submit">Login</button>
         </div>
       </form>
     </div>
-    <a href='/signup' class="sign-up-link">Sign Up instead</p>
+<button class="button pink-border">
+    <a href='/signup' class="sign-up-link is-turquoise has-text-weight-bold	">Sign Up instead</p>
+</button>
     <div class="col-md-6">
-    <script src="./js/login.js"></script>
+    <script type="text/javascript" src="../public/js/login.js"></script>
