--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,23 @@
 <div class="row">
-    <h2>Sign Up</h2>
+  <div class = "col-md-6">
+    <h2 class="is-pink is-size-3 has-text-weight-bold	">Sign Up</h2>
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">username:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <input class="form-input" type="text" id="username-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Sign Up</button>
+        <button class="mt-2 button btn is-primary" type="submit">Sign Up</button>
       </div>
     </form>
   </div>
-      <a href='/login' class="sign-up-link">Login instead</p>
+  <button class="button pink-border">
+      <a href='/login' class="login-up-link is-turquoise has-text-weight-bold">Login instead</p> 
+  </button>
 </div>
 
-<script src="./js/signup.js"></script>
+<script type="text/javascript" src="../public/js/signup.js"></script>
