changed script source path

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -55,9 +55,9 @@
 
   <!-- Render script for logged in users only -->
   {{#if logged_in}} 
-  <script src="../../public/js/logout.js"></script>
+  <script src="/js/logout.js"></script>
   {{/if}}
-  <script src="../../public/js/login.js" type="text/javascript"></script>
+  <script src="/js/login.js" type="text/javascript"></script>
 </body>
 
 </html>
