--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
 {{!-- {{#if logged_in}} --}}
 <a href="post/{{post.id}}">
 {{!-- {{/if}} --}}
-  <header class="card-header my-4 is-pink is-justify-content-space-between height gray-background">
+  <header class="card-header p-2 my-4 is-pink is-justify-content-space-between height gray-background">
     <div>{{post.title}}</div>
     <div>Posted by {{post.user.username}} on {{format_date post.date_created}}</div>
   </header>
