--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -20,4 +20,4 @@
   </button>
 </div>
 
-<script type="text/javascript" src="../public/js/signup.js"></script>
+<script src="/js/signup.js"></script>
