made updates to handlebars

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ header, .project:not(:last-child) {
   line-height: 50px;
 }
 .gray-background{
-  background-color: #e7e4e4;
+  background-color: #f0ecec;
 }
 .is-turquoise{
   color: #00d1b2;
