--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<div class="is-size-1	is-pink">Home</div>
+<div class="is-size-1	is-turquoise">🏠 Home</div>
 
 <!-- Loop over each object in the posts array -->
 {{#each posts as |post| }}
