--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
       <form class="form login-form">
         <div class="form-group">
           <label for="username-login">username:</label>
-          <input class="form-input" type="text" id="email-login" />
+          <input class="form-input" type="text" id="username-login" />
         </div>
         <div class="form-group">
           <label for="password-login">password:</label>
@@ -20,4 +20,4 @@
     <a href='/signup' class="sign-up-link is-turquoise has-text-weight-bold	">Sign Up instead</p>
 </button>
     <div class="col-md-6">
-    <script type="text/javascript" src="../public/js/login.js"></script>
+    <script type="text/javascript" src="/js/login.js"></script>
