--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,4 +20,9 @@
     <a href='/signup' class="sign-up-link is-turquoise has-text-weight-bold	">Sign Up instead</p>
 </button>
     <div class="col-md-6">
-    <script type="text/javascript" src="/js/login.js"></script>
+<!-- Render script for logged in users only -->
+  {{#if logged_in}} 
+  <script src="/js/logout.js"></script>
+  {{/if}}
+  <script src="/js/login.js" type="text/javascript"></script>
+</body>
