--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -3,12 +3,12 @@
         Edit Post
     </header>
     <form>
-        <label for="post-title">Title</label><br>
-        <input type="text" id="post-title">	{{post.title}}</input>
-        <label for="post-content">Content</label><br>
-        <input type="text" id="post-content">{{post.content}}</input>
+        <label for="eu-post-title">Title</label><br>
+        <input type="text" id="eu-post-title">	{{post.title}}</input>
+        <label for="eu-post-content">Content</label><br>
+        <input type="text" id="eu-post-content">{{post.content}}</input>
     </form>
     <button id= "update-post" data-post-id="{{post.id}}">Update</button>
     <button id= "delete-post" data-post-id="{{post.id}}">Delete</button>
 </div>
-
+<script src="js/post.js"></script>
