--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,11 +1,21 @@
-<div>
-    <header>Create New Post</header>
+
+<div class="card">
+  <header class="card-header card-header-color">
+    <p class="card-header-color">
+    Create New Post
+    </p>
+  </header>
+  <div class="card-content">
+    <div class="content">
     <form>
-        <label>Title</label><br>
-        <input type="text" id="create-post-title"></input><br>
-        <label>Content</label><br>
-        <input type="text" id="create-post-content"></input><br>
+        <label class="is-turquoise">Title</label><br>
+        <input class="textarea is-small" type="text" id="create-post-title"></input><br>
+        <label class="is-turquoise">Content</label><br>
+        <input class="textarea is-medium" type="text" id="create-post-content"></input><br>
        <button id="create-post-btn">Create</button>
-    </form>
+    </form>  
+    </div>
+  </div>
+  <div>    
 </div>
-<script src="js/post.js"></script>
+<script src="/js/post.js"></script>
