split post.js into two files, updated hbs

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -7,10 +7,10 @@
   <div class="card-content">
     <div class="content">
     <form>
-        <label for="eu-post-title" class="is-turquoise">Title</label><br>
-        <input class="textarea is-small" type="text" value="{{post.title}}" id="eu-post-title"></input>
-        <label for="eu-post-content" class="is-turquoise">Content</label><br>
-        <input class="textarea is-medium" type="text" value="{{post.content}}" id="eu-post-content"></input>
+        <label for="ed-post-title" class="is-turquoise">Title</label><br>
+        <input class="textarea is-small" type="text" value="{{post.title}}" id="ed-post-title"></input>
+        <label for="ed-post-content" class="is-turquoise">Content</label><br>
+        <input class="textarea is-medium" type="text" value="{{post.content}}" id="ed-post-content"></input>
 
     </form>
     <div class="field is-grouped">
@@ -25,5 +25,5 @@
   <div>    
 </div>
 
-<script src="/js/post.js"></script>
+<script src="/js/edpost.js"></script>
 
