--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,7 +1,7 @@
 
 <div class="card">
-  <header class="card-header card-header-color">
-    <p class="card-header-color">
+  <header class="card-header post-header-color">
+    <p class="post-header-color">
     Create New Post
     </p>
   </header>
@@ -12,7 +12,7 @@
         <input class="textarea is-small" type="text" id="create-post-title"></input><br>
         <label class="is-turquoise">Content</label><br>
         <input class="textarea is-medium" type="text" id="create-post-content"></input><br>
-       <button id="create-post-btn">Create</button>
+       <button id="create-post-btn" class ="is-small ml-1 mb-1 yellow-button is-rounded button">Create</button>
     </form>  
     </div>
   </div>
