--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,21 +3,21 @@
     <h2 class="is-pink is-size-3 has-text-weight-bold	">Sign Up</h2>
     <form class="form signup-form">
       <div class="form-group">
-        <label for="username-signup">username:</label>
+        <label class="is-turquoise has-text-weight-bold" for="username-signup">username:</label>
         <input class="form-input" type="text" id="username-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
+        <label class="is-turquoise has-text-weight-bold" for="password-signup">password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="mt-2 button btn is-primary" type="submit">Sign Up</button>
+        <button class="mt-2 btn is-medium ml-1 mb-1 yellow-button is-rounded button" type="submit">Sign Up</button>
+      </div>
+      <div class="is-flex is-justify-content-flex-end">      
+        <a href='/login' class="login-up-link is-turquoise has-text-weight-bold">Login instead</a> 
       </div>
     </form>
   </div>
-  <button class="button pink-border">
-      <a href='/login' class="login-up-link is-turquoise has-text-weight-bold">Login instead</p> 
-  </button>
 </div>
 
 <script src="/js/signup.js"></script>
