--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,8 @@
+<div class="is-flex is-flex-direction-row is-align-items-center	is-justify-content-space-between	">
+  <p class="is-size-1	is-turquoise">My Dashboard</p>
+  <a href="/create"><button class="is-medium ml-1 mb-1 pink-button is-rounded button">+ New Post</button></a>
+</div>
 
-<div class="is-size-1	is-turquoise">My Dashboard</div>
 {{#each posts as |post|}}
 <a href="edit/{{post.id}}">
   <header class="card-header blog-post p-2 my-4 is-justify-content-space-between height">
@@ -9,4 +12,4 @@
 </a>
 {{/each}}
 </div>
-<a href="/create"><button>+ New Post</button></a>
+
