--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,21 +4,21 @@
   
       <form class="form login-form">
         <div class="form-group">
-          <label for="username-login">username:</label>
+          <label class="is-turquoise has-text-weight-bold" for="username-login">username:</label>
           <input class="form-input" type="text" id="username-login" />
         </div>
         <div class="form-group">
-          <label for="password-login">password:</label>
+          <label class="is-turquoise has-text-weight-bold" for="password-login">password:</label>
           <input class="form-input" type="password" id="password-login" />
         </div>
         <div class="form-group">
-          <button class="mt-2 button btn is-primary" type="submit">Login</button>
+          <button class="mt-2 btn is-medium ml-1 mb-1 yellow-button is-rounded button" type="submit">Login</button>
         </div>
+        <div class="is-flex is-justify-content-flex-end">      
+          <a href='/signup' class="sign-up-link is-turquoise has-text-weight-bold">Sign Up instead</a>
+       </div>
       </form>
     </div>
-<button class="button pink-border">
-    <a href='/signup' class="sign-up-link is-turquoise has-text-weight-bold	">Sign Up instead</p>
-</button>
     <div class="col-md-6">
   <script src="/js/login.js" type="text/javascript"></script>
 </body>
