fixed homeRoutes, styling

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -25,7 +25,7 @@
 <div class="mx-5 card">
   <header class="card-header comment-header-color">
     <p class="comment-header-color">
-      Posted by: {{comment.user_id.username}}    
+      Posted by: {{comment.user.username}}    
     </p>
   </header>
   <div class="card-content">
