--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,3 @@
-header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
-}
-
 .no-button {
   background: none;
   border: none;
@@ -64,4 +60,8 @@ header, .project:not(:last-child) {
 .sticky{
   position: sticky; 
   bottom: 0;  
+}
+.nav-bar{
+  height:70px;
+  border-bottom: 1px solid #eb6567;
 }
