--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -27,7 +27,7 @@
 <div class="mx-5 card">
   <header class="card-header comment-header-color">
     <p class="comment-header-color">
-      Posted by: {{comment.user.username}}    
+      Posted by: {{comment.user.username}} on {{format_date comment.date_created}}
     </p>
   </header>
   <div class="card-content">
