removed console.logs and added comments

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,4 +1,4 @@
-
+{{!-- create post page --}}
 <div class="card">
   <header class="card-header post-header-color">
     <p class="post-header-color">
