--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,3 +1,4 @@
+{{!-- sign up page --}}
 <div class="row">
   <div class = "col-md-6">
     <h2 class="is-pink is-size-3 has-text-weight-bold	">Sign Up</h2>
